--- a/payment-page-react-native-functional-integration-demo/android/build.gradle
+++ b/payment-page-react-native-functional-integration-demo/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         ndkVersion = "21.4.7075529"
         // block:start:add-ext-property
 
-        hyperSDKVersion = "2.0.4-rc.19"
+        hyperSDKVersion = "2.1.2"
         useDynamicAssets = true
         
         // block:end:add-ext-property
