--- a/payment-page-android-java-integration-demo/app/build.gradle
+++ b/payment-page-android-java-integration-demo/app/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.android.material:material:1.1.0'
     //block:start:add-sdk-implementation
-    implementation 'in.juspay:hypersdk:2.1.2'
+    implementation 'in.juspay:hypersdk:2.1.10'
+    implementation 'in.juspay:hyperinteg:2.1.10'
     //block:end:add-sdk-implementation
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
     testImplementation 'junit:junit:4.+'
