payment-page-android-2.0sdk

--- a/payment-page-android-java-integration-demo/build.gradle
+++ b/payment-page-android-java-integration-demo/build.gradle
@@ -4,16 +4,14 @@ buildscript {
         google()
         mavenCentral()
         // block:start:assets-plugin-maven-url
-        maven {
-            url "https://maven.juspay.in/jp-build-packages/hypersdk-asset-download/releases/"
-        }
+        maven { url "https://maven.juspay.in/jp-build-packages/hyper-sdk/" }
         // block:end:assets-plugin-maven-url
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.0"
 
         // block:start:assets-class-path
-        classpath 'in.juspay:hypersdk-asset-plugin:1.0.3'
+        classpath 'in.juspay:hypersdk.plugin:2.0.2'
         // block:end:assets-class-path
 
         // NOTE: Do not place your application dependencies here; they belong
