--- a/payment-page-android-java-integration-demo/app/build.gradle
+++ b/payment-page-android-java-integration-demo/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
 //block:start:add-sdk-implementation
 hyperSdkPlugin {
-    clientId = "picasso"
+    clientId = "<CLIENT_ID>"
     sdkVersion = "2.1.11"
 }
 //block:end:add-sdk-implementation
