Revert "sdk2.0 update"
This reverts commit ec8f552392e50c72e0a1ed35e160f405b956201d.

--- a/payment-page-android-java-integration-demo/app/build.gradle
+++ b/payment-page-android-java-integration-demo/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
 //block:start:add-sdk-implementation
 hyperSdkPlugin {
-    clientId = "<CLIENT_ID>"
+    clientId = "picasso"
     sdkVersion = "2.1.11"
 }
 //block:end:add-sdk-implementation
