--- a/payment-page-android-java-integration-demo/app/build.gradle
+++ b/payment-page-android-java-integration-demo/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     // block:start:apply-plugin
-    id 'hypersdk-asset-plugin'
+    id 'hypersdk.plugin'
     // block:end:apply-plugin
 }
 
@@ -36,11 +36,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.android.material:material:1.1.0'
-    //block:start:add-sdk-implementation
-    implementation 'in.juspay:hypersdk:2.1.11'
-    //block:end:add-sdk-implementation
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+//block:start:add-sdk-implementation
+hyperSdkPlugin {
+    clientId = "<CLIENT_ID>"
+    sdkVersion = "2.1.11"
+}
+//block:end:add-sdk-implementation
+
