--- a/payment-page-flutter-flutter-integration-demo/android/app/build.gradle
+++ b/payment-page-flutter-flutter-integration-demo/android/app/build.gradle
@@ -24,10 +24,6 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-// Applying HyperAssets plugin
-// block:start:apply-plugin
-apply plugin: 'hypersdk-asset-plugin'
-// block:end:apply-plugin
 
 android {
     compileSdkVersion 31
@@ -58,7 +54,11 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.debug
+            ndk {
+                abiFilters 'armeabi-v7a','arm64-v8a','x86_64'
+            }
+
         }
     }
 }
