--- a/payment-page-android-java-integration-demo/app/build.gradle
+++ b/payment-page-android-java-integration-demo/app/build.gradle
@@ -40,6 +40,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    
+    //block:start:add-customer-implementation
+    implementation 'in.juspay.mobility-customer:1.0.0'
+    //block:end:add-customer-implementation
+
 }
 
 //block:start:add-sdk-implementation
