--- a/payment-page-android-kotlin-integration-demo/app/build.gradle
+++ b/payment-page-android-kotlin-integration-demo/app/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //block:start:add-customer-implementation
+    implementation 'in.juspay.mobility-customer:1.0.0'
+    //block:end:add-customer-implementation
+
 }
 
 // Adding HyperSDK implementation
