new-android-integration

--- a/getting-sdk/app/apply-plugin.gradle
+++ b/getting-sdk/app/apply-plugin.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     // block:start:apply-plugin
-    id 'hypersdk-asset-plugin'
+    id 'hypersdk.plugin'
     // block:end:apply-plugin
 }
 
