--- a/getting-sdk/app/sdk-implementation.gradle
+++ b/getting-sdk/app/sdk-implementation.gradle
@@ -12,3 +12,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+hyperSdkPlugin {
+    clientId = "<CLIENT_ID>"
+    sdkVersion = "2.1.12"
+}
