--- a/react-native/add-dependency.gradle
+++ b/react-native/add-dependency.gradle
@@ -6,8 +6,8 @@ ext {
     ndkVersion = "21.4.7075529"
     // block:start:add-ext-property
 
-    hyperSDKVersion = "2.1.7"
-    useDynamicAssets = true
+    clientId = "your_client_id"
+    hyperSDKVersion = "2.1.12"
 
     // block:end:add-ext-property
 }
