--- a/payment-page-flutter-flutter-integration-demo/android/app/build.gradle
+++ b/payment-page-flutter-flutter-integration-demo/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -45,7 +45,7 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.doc_app"
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -56,7 +56,7 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             // signingConfig signingConfigs.debug
             ndk {
-                abiFilters 'armeabi-v7a','arm64-v8a','x86_64'
+                abiFilters 'armeabi-v7a','arm64-v8a','x86_64', 'arm64e'
             }
 
         }
