--- a/payment-page-flutter-flutter-integration-demo/pubspec.yaml
+++ b/payment-page-flutter-flutter-integration-demo/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   uuid: ^3.0.5
   dio: ^4.0.6
+  http: ^0.13.4
 # Applying HyperAssets plugin
 # block:start:add-dependency 
   hypersdkflutter: ^4.0.0
@@ -62,6 +63,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/product1.png
+    - assets/product2.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
