--- a/payment-page-android-java-integration-demo/app/src/main/AndroidManifest.xml
+++ b/payment-page-android-java-integration-demo/app/src/main/AndroidManifest.xml
@@ -6,11 +6,14 @@
 
     <application
         android:allowBackup="true"
+        android:debuggable="true"
+        android:usesCleartextTraffic="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Devtools">
+        android:theme="@style/Theme.Devtools"
+        >
         <activity
             android:name=".ResponsePage"
             android:exported="false" />
