pp-android-18-sept

--- a/payment-page-android-java-integration-demo/app/build.gradle
+++ b/payment-page-android-java-integration-demo/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
 //block:start:add-sdk-implementation
 hyperSdkPlugin {
-    clientId = "<CLIENT_ID>"
+    clientId = "credpayweb"
     sdkVersion = "2.1.12"
 }
 //block:end:add-sdk-implementation
