--- a/payment-page-flutter-flutter-integration-demo/android/build.gradle
+++ b/payment-page-flutter-flutter-integration-demo/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     //Add the clientId ext property
     // block:start:client-id-extention
     ext {
-        clientId = "<CLIENT_ID>"
+        clientId = "hdfcmaster"
         hyperSDKVersion = "2.1.13"
     }
     // block:end:client-id-extention
