--- a/payment-page-android-kotlin-integration-demo/app/build.gradle
+++ b/payment-page-android-kotlin-integration-demo/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    
+    // Applying HyperAssets plugin
     // block:start:apply-plugin
     id 'hypersdk.plugin'
     // block:end:apply-plugin
@@ -36,16 +39,18 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.android.material:material:1.1.0'
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
+    implementation 'androidx.constraintlayout:constraintlayout-core:1.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
 
+// Adding HyperSDK implementation
 //block:start:add-sdk-implementation
 hyperSdkPlugin {
-    clientId = "geddit"
+    clientId = "hdfcmaster"
     sdkVersion = "2.1.20-rc.03"
     microSDKs = ["hypercheckoutlite"]
 }
 //block:end:add-sdk-implementation
-
