--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 
 //block:start:add-sdk-implementation
 hyperSdkPlugin {
-    clientId = "geddit"
+    clientId = "hdfcmaster"
     sdkVersion = "2.1.20-rc.03"
     microSDKs = ["hypercheckoutlite"]
 }
