--- a/payment-page-flutter-flutter-integration-demo/android/build.gradle
+++ b/payment-page-flutter-flutter-integration-demo/android/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     // block:start:client-id-extention
     ext {
         clientId = "hdfcmaster"
-        hyperSDKVersion = "2.1.13"
+        hyperSDKVersion = "2.1.20-rc.03"
+        microSDKs = ['hypercheckoutlite']
     }
     // block:end:client-id-extention
     repositories {
