--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ dependencies {
 
 //block:start:add-sdk-implementation
 hyperSdkPlugin {
-    clientId = "geddit"
-    sdkVersion = "2.1.20-rc.05"
+    clientId = "hdfcmaster"
+    sdkVersion = "2.1.20-rc.06"
     microSDKs = ["hypercheckoutlite"]
 }
 //block:end:add-sdk-implementation
