--- a/expresscheckout-dotnet-sdk/config.json
+++ b/expresscheckout-dotnet-sdk/config.json
@@ -1,1 +1,1 @@
-{"MERCHANT_ID":"azhar_test", "PRIVATE_KEY_PATH":"privateKey.pem","PUBLIC_KEY_PATH":"publicKey.pem","KEY_UUID":"key_d4af586ffb0b42d097b96eb3427b0391", "PAYMENT_PAGE_CLIENT_ID": "azhar_test"}
+{"MERCHANT_ID":"YOUR_MERCHANT_ID", "PRIVATE_KEY_PATH":"privateKey.pem","PUBLIC_KEY_PATH":"publicKey.pem","KEY_UUID":"YOUR_KEY_ID", "PAYMENT_PAGE_CLIENT_ID": "YOUR_PAYMENY_PAGE_CLIENT_ID"}
