--- a/payment-page-react-native-class-integration-demo/android/build.gradle
+++ b/payment-page-react-native-class-integration-demo/android/build.gradle
@@ -4,12 +4,12 @@ buildscript {
     ext {
         buildToolsVersion = "31.0.0"
         minSdkVersion = 21
-        compileSdkVersion = 31
+        compileSdkVersion = 33
         targetSdkVersion = 31
         ndkVersion = "21.4.7075529"
         // block:start:add-ext-property
         kotlin_version = '1.6.10'
-        clientId = "<CLIENT_ID>"
+        clientId = "hdfcmaster"
         hyperSDKVersion = "2.1.13"
 
         // block:end:add-ext-property
