--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-loader": "^1.3.1",
+    "react-native-loader-kit": "^2.0.5",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.20.0",
     "react-native-uuid": "^2.0.1",
