--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,7 @@ dependencies {
 //block:start:add-sdk-implementation
 hyperSdkPlugin {
     clientId = "hdfcmaster"
-    sdkVersion = "2.1.20-rc.06"
-    microSDKs = ["hypercheckoutlite"]
+    sdkVersion = "2.1.20"
 }
 //block:end:add-sdk-implementation
 
