--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,6 @@ dependencies {
 //block:start:add-sdk-implementation
 hyperSdkPlugin {
     clientId = "hdfcmaster"
-    sdkVersion = "2.1.20-rc.06"
+    sdkVersion = "2.1.20"
 }
 //block:end:add-sdk-implementation
