--- a/expresscheckout-php-sdk/composer.json
+++ b/expresscheckout-php-sdk/composer.json
@@ -2,7 +2,7 @@
     "name": "ramprakash.v/php_kit",
     "type": "project",
     "require": {
-        "juspay/expresscheckout-php-sdk": "*"
+        "juspay/expresscheckout-php-sdk": "2.0.1"
     },
     "autoload": {
         "psr-4": {
