--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+# block:start:add-dependency
   hypersdkflutter: ^4.0.9
+# block:end:add-dependency
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
