--- a/expresscheckout-dotnet-sdk/dotnet_server.csproj
+++ b/expresscheckout-dotnet-sdk/dotnet_server.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFrameworks>net7.0;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>net7.0;net5.0;net6.0;netcoreapp3.1;netcoreapp3.0</TargetFrameworks>
     <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="expresscheckout" Version="2.0.3" />
+    <PackageReference Include="expresscheckout" Version="2.0.4" />
   </ItemGroup>
 </Project>
