--- a/expresscheckout-php-sdk/composer.json
+++ b/expresscheckout-php-sdk/composer.json
@@ -13,7 +13,7 @@
         "process-timeout":0
     },
     "scripts": {
-        "run_server": "composer install && php -S 0.0.0.0:5000 router.php",
+        "run_server": "composer install --no-dev && php -S 0.0.0.0:5000 router.php",
         "run_app": "composer install && php Program.php"
     },
     "authors": [
