--- a/SampleKitWithoutSdk-DemoProject/pom.xml
+++ b/SampleKitWithoutSdk-DemoProject/pom.xml
@@ -24,6 +24,7 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- block:start:jar-files -->
         <dependency>
             <groupId>in.samplekit</groupId>
             <artifactId>PaymentHandler</artifactId>
@@ -31,6 +32,7 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/expresscheckout-1.0.0.jar</systemPath>
         </dependency>
+        <!-- block:end:jar-files -->
     </dependencies>
 
     <build>
